@@ -1,7 +1,12 @@
 2008-05-20  Vivien Malerba <malerba@gnome-db.org>
 
-	* libgda/gda-connection.c: applied path to xi mem leak (thanks to
-	from Phil Longstaff)
+	* libgda/gda-connection.c: applied path to fxi compiler warnings (thanks to
+	Phil Longstaff)
+
+2008-05-20  Vivien Malerba <malerba@gnome-db.org>
+
+	* libgda/gda-connection.c: applied path to fxi mem leak (thanks to
+	Phil Longstaff)
 	* libgda/gda-data-model.c:
 	* libgda/gda-util.c:
 	* libgda/gda-data-model-array.c: cosmetic changes
